test-suite/tests/fail/ui/states/not_method_reject.rs
use stated::stated;

#[stated(states(A))]
pub struct Test<#[stated] S>;

#[stated]
impl<#[stated] S> Test<S> {
    #[stated(reject(A))]
    pub fn new() {}
}

fn main() {}
